--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml": "7.1.*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^2.0"
     },
     "config": {
         "allow-plugins": {
